the assembly now runs parallel over cores

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,9 @@ Imports:
     configr,
     data.table,
     docopt,
+    doParallel,
+    doSNOW,
+    foreach,
     futile.logger,
     parallel,
     pracma,
