--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,3 +15,5 @@ export(save_chunks)
 export(worker)
 import(data.table)
 import(futile.logger)
+importFrom(foreach,"%do%")
+importFrom(foreach,"%dopar%")
