created a new function to make rc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,12 +8,15 @@ export(check_args)
 export(construct_plan)
 export(decode_hilbert)
 export(draw_parameters)
+export(draw_parameters_three)
 export(encode_hilbert)
 export(encode_hilbert_zero)
 export(funcmain)
 export(gadm_country_shapefile)
 export(improved_errors)
+export(load_pixel_script)
 export(main)
+export(pixel_four)
 export(pixel_three)
 export(save_chunks)
 export(worker)
