This runs globalrc on a single year from start to finish.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ export(main)
 export(pixel_four)
 export(pixel_three)
 export(save_chunks)
+export(slice_funcmain)
+export(slice_main)
 export(worker)
 import(data.table)
 import(futile.logger)
